--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
+    "@suprsend/react-inbox": "^3.2.0",
+    "@suprsend/web-sdk": "^1.3.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
